add swagger ui at /openapi
